添加linux环境下链接脚本

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,8 +5,13 @@
     "tasks": [{
         "label": "build",
         "type": "shell",
-        "command": "cscript",
-        "args": ["mklink.js"],
+        "windows": {
+            "command": "cscript",
+            "args": ["mklink.js"],
+        },
+        "linux": {
+            "command": "./ln.sh"
+        },
         "group": { "kind": "build", "isDefault": true },
         "presentation": {
             "showReuseMessage": false,
