分离用于linux的配置文件

--- a/settings.jsonc
+++ b/settings.jsonc
@@ -1,7 +1,6 @@
 {
     "breadcrumbs.enabled": false,
     "debug.openDebug": "neverOpen",
-    "editor.fontFamily": "Consolas, '微软雅黑'",
     "editor.formatOnSave": true,
     "editor.minimap.enabled": false,
     "editor.multiCursorModifier": "ctrlCmd",
@@ -25,17 +24,10 @@
     "search.followSymlinks": false,
 
     "terminal.integrated.copyOnSelection": true,
-    "terminal.integrated.fontFamily": "Consolas, '微软雅黑'",
-    "terminal.integrated.fontSize": 13,
-    // "terminal.integrated.shell.windows": "C:/Windows/system32/cmd.exe",
-    "terminal.integrated.shell.windows": "C:/Program Files/Git/bin/bash.exe",
-
-    "remote.SSH.path": "ssh.exe",
+    "terminal.integrated.fontFamily": "monospace",
 
     "files.associations": { "*.frm": "vb" },
-
     "[bat]": { "files.encoding": "gb2312" },
-    "[javascript]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
     "[jsonc]": { "editor.defaultFormatter": "HookyQR.beautify" },
 
     "extensions.autoUpdate": false,
@@ -49,27 +41,6 @@
     "csscomb.formatOnSave": true,
     "csscomb.preset": "~/csscomb.js",
 
-    "lebab.transforms": [
-        "arrow", // callback to arrow function
-        "arrow-return", // drop return statements in arrow functions
-        "for-of", // for loop to for-of loop
-        "for-each", // for loop to Array forEach()
-        "arg-rest", // use of arguments to function(...args)
-        "arg-spread", // use of apply() to spread operator
-        "obj-method", // function values in objects to methods
-        // "obj-shorthand", // {foo: foo} to {foo}
-        "no-strict", // remove "use strict" directives
-        "exponent", // Math pow() to ** operator (ES7)
-        // "multi-var", // single var x,y; declaration to var x; var y; (refactor)
-        // "let", // var to let/const
-        "class", // prototype assignments to class declaration
-        // "commonjs", // CommonJS module loading to import/export
-        "template", // string concatenation to template string
-        "default-param", // use of || to default parameters
-        // "destruct-param", // use destructuring for objects in function parameters
-        // "includes", // indexOf() != -1 to includes() (ES7)
-    ],
-
     "eslint.autoFixOnSave": true,
     "eslint.alwaysShowStatus": true,
 
@@ -82,10 +53,4 @@
     "prettier.tabWidth": 4,
     "prettier.trailingComma": "es5",
     "prettier.useTabs": false,
-
-    "code-runner.temporaryFileName": "test",
-
-    "importCost.bundleSizeDecoration": "minified",
-    "importCost.debug": true,
-    "importCost.timeout": 100000,
 }
