调整文件路径及链接脚本

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
             "args": ["mklink.js"],
         },
         "linux": {
-            "command": "./ln.sh"
+            "command": "./apply"
         },
         "group": { "kind": "build", "isDefault": true },
         "presentation": {
