调整linux系统配置文件

--- a/linux/settings.json
+++ b/linux/settings.json
@@ -1,7 +1,7 @@
 {
     "breadcrumbs.enabled": false,
     "debug.openDebug": "neverOpen",
-    "diffEditor.ignoreTrimWhitespace": true,
+    "diffEditor.ignoreTrimWhitespace": false,
     "editor.autoClosingBrackets": "always",
     "editor.autoClosingQuotes": "always",
     "editor.formatOnSave": true,
@@ -31,29 +31,24 @@
     "terminal.integrated.copyOnSelection": true,
     "terminal.integrated.fontFamily": "monospace",
     "terminal.integrated.rightClickBehavior": "copyPaste",
-
+    "terminal.integrated.shell.linux": "/bin/bash",
+    "files.associations": { "*.gyp": "jsonc" },
     "[bat]": { "files.encoding": "gb2312" },
+    "[html]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
     "[javascript]": { "editor.defaultFormatter": "HookyQR.beautify" },
     "[json]": { "editor.defaultFormatter": "HookyQR.beautify" },
     "[jsonc]": { "editor.defaultFormatter": "HookyQR.beautify" },
-    "[markdown]": { "editor.fontFamily": "Sarasa Mono SC Light", "editor.fontSize": 16 },
-
+    "[markdown]": { "editor.fontFamily": "Sarasa Mono Slab SC Light", "editor.fontSize": 16 },
+    "[vue]": { "editor.defaultFormatter": "octref.vetur" },
     "beautify.config": "~/.jsbeautifyrc",
     "beautify.language": { "js": { "type": ["javascript", "json", "jsonc"], "filename": [".jshintrc", ".jsbeautifyrc", "settings.json"] }, "css": [], "html": [] },
     "csscomb.formatOnSave": true,
     "csscomb.preset": "~/.csscomb.js",
+    "editor.codeActionsOnSave": { "source.fixAll.eslint": true },
     "eslint.alwaysShowStatus": true,
-    "eslint.autoFixOnSave": true,
-    "lebab.transforms": ["arg-spread", "arrow-return", "arrow", "class", "default-param", "destruct-param", "exponent", "for-each", "for-of", "no-strict", "obj-method", "template"],
-    "prettier.arrowParens": "avoid",
-    "prettier.bracketSpacing": true,
-    "prettier.printWidth": 160,
-    "prettier.quoteProps": "preserve",
-    "prettier.semi": true,
-    "prettier.singleQuote": true,
-    "prettier.tabWidth": 4,
-    "prettier.trailingComma": "es5",
-    "prettier.useTabs": false,
+    "eslint.options": { "configFile": "/home/hs/.eslintrc.js" },
+    "lebab.transforms": ["arg-spread", "arrow-return", "arrow", "class", "default-param", "destruct-param", "exponent", "for-each", "for-of", "no-strict", "obj-method"],
     "shellformat.effectLanguages": ["shellscript", "dockerfile", "dotenv", "hosts", "ignore", "gitignore", "azcli"],
-    "svg.format.plugins": { "sortAttrs": true, "convertPathData": false, "mergePaths": false },
+    "svg.minify.sortDefsChildren": false,
+    "svg.preview.mode": "svg"
 }
